--- a/client/src/components/Components/Button/Button.css
+++ b/client/src/components/Components/Button/Button.css
@@ -2,7 +2,7 @@
     margin: 5px;
     border-radius: 25px;
     /* height: 2.5rem;  */
-    padding: 0.5rem;
+    padding: 0.5rem 1.125rem;
     border: 2px solid #23A6F0;
     display: flex;
     align-items: center;
