--- a/client/src/components/ConsolePage/consolepage.css
+++ b/client/src/components/ConsolePage/consolepage.css
@@ -69,6 +69,8 @@
 
 .bottomsection {
     /* position: absolute; */
-    height: 65vh;
+    min-height: 63vh;
     width: 100vw;
+    padding-bottom: 2vh;
+    background: #e8f1ff;
 }
