--- a/client/src/components/ConsolePage/templatechoice.css
+++ b/client/src/components/ConsolePage/templatechoice.css
@@ -6,6 +6,14 @@
     justify-content: center;
     align-items: center;
 }
+.wrapper {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .pageinfo {
     height: 2rem;
     width: 100%;
@@ -34,4 +42,8 @@
     align-items: center;
     justify-content: center;
     transform: scale(0.8);
+}
+
+.hiddd {
+    display: none;
 }
