--- a/client/src/components/utils/imageuploader.css
+++ b/client/src/components/utils/imageuploader.css
@@ -1,12 +1,14 @@
 .fileinput {
-    display: inline-block;
     background-color: #23a6f0;
     color: white;
     padding: 0.5rem;
-    padding-left:1rem;
-    padding-right:1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     font-family: sans-serif;
     border-radius: 0.3rem;
     cursor: pointer;
     margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
